# light-neural-network-java

./: .gitignore  CMakeLists.txt  DataType.cpp  NDArray.hpp  Shape.cpp  pom.xml
cpp/: .gitignore  Context.cpp  Context.hpp  DataType.hpp  NDArray.cpp  NDArray.hpp  Shape.hpp
java/: .editorconfig  pom.xml
src/main/java/org/zxg/ai/lnn/: LnnException.java  LnnIOException.java
src/main/java/org/zxg/ai/lnn/autograd/: CachedComputation.java  Computation.java  Constant.java  LeftDotComputation.java  OnesGradientComputation.java  RightDotComputation.java  Variable.java
src/main/java/org/zxg/ai/lnn/nn/: Component.java  Layer.java  Linear.java  Net.java  Sequential.java  StatefulLayer.java  StatelessLayer.java
src/main/java/org/zxg/ai/lnn/opencl/: Arg.java  BufferArg.java  BufferArray.java  Buffers.java  CacheArg.java  Calling.java  Device.java  DoubleArg.java  DoubleArray.java  FloatArg.java  FloatArray.java  IntArg.java  IntArray.java  Kernel.java  LnnCLException.java  LongArg.java  LongArray.java  NullPtrArg.java  Program.java  Range.java  Range1D.java  Range2D.java  Range3D.java  ShortArg.java  ShortArray.java
src/main/java/org/zxg/ai/lnn/optimizer/: Adadelta.java  Adagrad.java  Adam.java  Optimizer.java  ParamGroup.java  RMSprop.java  SGD.java
src/main/java/org/zxg/ai/lnn/tensor/: Array.java  ArrayIterator.java  DimException.java  IntTensor.java  ShapeException.java  ShapeInfo.java  Tensor.java  TensorRandom.java
src/main/java/org/zxg/ai/lnn/tuple/: FloatTuple2.java  IntTuple2.java  IntTuple3.java  Tuple.java  (+1 more)
tvm/: .gitignore  NDArray.py  generator.py
(+309 files in other folders)
